# Aim

./: Aim.pro  CMakeLists.txt  client.cpp  client.h  client.ui  common.h  main.cpp  mythread.cpp  mythread.h  mythreadenter.cpp  mythreadenter.h  server.cpp  server.h  server.ui  threadout.cpp  threadout.h
Client/: Aim.pro  client.ui  common.h  imagesResurses.qrc  main.cpp  threadout.h
Server/: Server.pro  mythreadenter.cpp  mythreadenter.h  server.cpp  server.h  server.ui
